: Version 0.3.1
    - Added support for non-square shaped boards (they can be used now in total
      deployment games)
    - Fixed bug in GUI. If a new total deployment game was launched while the
      computer was calculating a move for the 1 vs 1 game the mouse cursor 
      never came back to the default arrow (it kept showing the busy icon)
    - Fixed bug in GUI. Latest deployed piece glowing effect didn't work when
      two types of game where played before restarting the application. This 
      was due to the way g_timeout_add works
    - Whenever a game is cancelled its corresponding GLib timers are stopped so
      they don't keep counting forever

16/10/2010: Version 0.3.0
    - Major refactoring on GUI handling. New games can be added easier into 
      the Main Window. New Game dialog redesigned too.
    - Total allocation mode available on GUI. Player is requested to put down 
      all his/her pieces on a custom-size board playing against no opponent
    - Tooltip with each piece's name has been added to the available pieces 
      shown to the user. It is shown when the mouse is stopped over a currently
      available piece
    - New configuration file in xml format which is loaded at start-up in win32
      platforms. At the moment it is only used to set the language on these 
      platforms but it could be easily expanded in future (and created in and
      loaded from $HOME directories under *nix)
    - Algorithm to draw the board status improved. It needs less processing now
    - Directories used by the debian package have been changed to the ones
      most commonly used
    - Bug fixed in win32 platforms: Bogus handling of i18n in command line 
      arguments

28/08/2010: Version 0.2.4
    - About Dialog contains the URL of the project
    - Support for internationalization. Available languages for now are English
      and Spanish

19/07/2010: Version 0.2.3
    - Around 20% performance improvement of Minimax algorithm since 0.2.2