@@ -1,6 +1,12 @@
 : Version 0.3.1
     - Added support for non-square shaped boards (they can be used now in total
       deployment games)
+    - Challenge game mode added to the GUI. A blockem challenge is a special 
+      kind of game that consists in a customised board where a player must 
+      allocate a set of pieces (might be all of them or just a subset of all 
+      the available pieces). There is no opponent, so the human user will be 
+      playing against the challenge's designer. Have a read to the README file
+      of this project (also to the file challenges/README)
     - Fixed bug in GUI. If a new total deployment game was launched while the
       computer was calculating a move for the 1 vs 1 game the mouse cursor 
       never came back to the default arrow (it kept showing the busy icon)
